--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,10 @@
 	<title>AFR System</title>
 	<meta charset="utf-8" />
 
-	<link rel="icon" href="static/images/World-Icon.ico">
+	<link rel="icon" href="static/images/World-Icon.png">
 	<link rel="stylesheet" type="text/css" href="static/css/index.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="static/css/bootstrap.css">
 
 </head>
 
@@ -15,7 +16,7 @@
 
 	<div class="container">
 	    <nav id="barras-busqueda">
-	      <a class="barra2 nav-link disabled PauVila" href="/">Pau Vila</a>
+	      <a class="barra2 nav-link disabled" href="/">Pau Vila</a>
 	      <a class="barra2" href="/">Inici</a>
 	      <a class="barra2" href="/eso">ESO</a>
 	      <a class="barra2" href="/batx">Batxillerat</a>
@@ -100,6 +101,7 @@
 
 </div>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </html>
